src/component/loading_list/snapshots/envision__component__loading_list__tests__view_with_title.snap
---
source: src/component/loading_list/tests.rs
expression: terminal.backend().to_string()
---
┌My Items──────────────────────────────────────────────────┐
│    Item One                                              │
│    Item Two                                              │
│    Item Three                                            │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
