src/component/loading_list/snapshots/envision__component__loading_list__tests__view_without_indicators_with_error.snap
---
source: src/component/loading_list/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│  Item One - Error: Failed                                │
│  Item Two                                                │
│  Item Three                                              │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
